@@ -54,7 +54,7 @@ import net.miginfocom.swing.MigLayout;
  * @author Manuel Laggner
  */
 public class TvShowScrapeMetadataDialog extends TmmDialog {
-  private boolean                                                                      startScrape      = false;
+  private boolean                                                                      startScrape = false;
 
   /** UI components */
   private final JComboBox                                                              cbLanguage;
@@ -92,14 +92,15 @@ public class TvShowScrapeMetadataDialog extends TmmDialog {
 
     if (!artworkOnly) {
       JLabel lblMetadataScraperT = new TmmLabel(TmmResourceBundle.getString("scraper.metadata"));
-      panelContent.add(lblMetadataScraperT, "cell 0 1,alignx trailing");
 
       cbMetadataScraper = new MediaScraperComboBox(TvShowModuleManager.getInstance()
           .getTvShowList()
           .getAvailableMediaScrapers()
           .stream()
           .filter(scraper -> !(scraper.getMediaProvider() instanceof KodiTvShowMetadataProvider))
-          .collect(Collectors.toList()));
+          .toList());
+
+      panelContent.add(lblMetadataScraperT, "cell 0 1,alignx trailing");
       panelContent.add(cbMetadataScraper, "cell 1 1,growx");
     }
 
